--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       })(document);
 
     </script>
-  <link href="C:\Users\kawaguchi\Box\【図書館事務部共有】\3.Staff\012_情報管理係\90_tmp_作業用\オンライン\NII研修/style.css" rel="stylesheet"></head>
+  <link href="style.css" rel="stylesheet"></head>
 
   <!-- Button trigger modal -->
   <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
